# gtest_example

./: CMakeLists.txt
include/gtest_test/: gtest_test.hpp
src/: gtest_test.cpp
test/: gtest_ex.cpp
